fixed bug of overflow

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -60,6 +60,12 @@ code{
   border-radius: 3px;
   word-break: break-all;
   line-height: 20px;
+  overflow: auto;
+  max-width: 100%;
+}
+
+pre{
+  white-space: pre-wrap;
 }
 
 #SOHUCS{
