--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -49,12 +49,13 @@
 }
 
 .show_tag_index{      /* 在标签的index页面展示的tag*/
-    border: solid 2px lightblue;
-    box-shadow: 1px 2px 5px lightblue;
-    border-radius: 10px;
-    padding: 6px;
-    margin: 8px;
-    font-size: 1.5em;
+  border: solid 2px lightblue;
+  box-shadow: 1px 2px 5px lightblue;
+  border-radius: 10px;
+  padding: 2px 6px;
+  margin: 10px;
+  font-size: 1.5em;
+  display: inline-block;
 }
 
 @media only screen and (max-device-width: 400px){
